update: 数式環境を変更．

--- a/main_template.tex
+++ b/main_template.tex
@@ -9,12 +9,12 @@
 \usepackage{mathtools}
 \usepackage{empheq}
 \usepackage{amsthm}
-\newtheorem{dfn}{定義}
-\newtheorem{thm}{定理}
+\newtheorem{definition}{定義}
+\newtheorem{theorem}{定理}
 \newtheorem{prf}{証明}
 \newtheorem{law}{法則}
-\newtheorem{ex}{例}
-\newtheorem{lemm}{補題}
+\newtheorem{example}{例}
+\newtheorem{lemma}{補題}
 % 斜体を解除
 \makeatletter
 \def\th@plain{\upshape}
@@ -373,11 +373,11 @@ $\displaystyle p_n(x) =\sum_{i=0}^n f[x_0,\cdots,x_i] \prod_{j=0}^{i-1}(x-x_j)$
 \end{itemize}
 
 \begin{screen}
-    \begin{thm}（フェルマーの小定理）\\
+    \begin{theorem}（フェルマーの小定理）\\
         \label{fermat}
         $p$ が素数で $x \in \mathbb{Z}$ が $p$ で割り切れなければ，
         $x^{p-1} \equiv 1 \mod{p}$．
-    \end{thm}
+    \end{theorem}
 \end{screen}
 
 \begin{prf}
@@ -386,9 +386,9 @@ $\displaystyle p_n(x) =\sum_{i=0}^n f[x_0,\cdots,x_i] \prod_{j=0}^{i-1}(x-x_j)$
     頑張ってね．
 \end{prf}
 
-\begin{ex}
+\begin{example}
     こんな感じで例を書く．
-\end{ex}
+\end{example}
 
 \subsection{マクロによる数式}
 \myitem{順列}
