--- a/main_template_lua.tex
+++ b/main_template_lua.tex
@@ -13,6 +13,10 @@
 \newtheorem{law}{法則}
 \newtheorem{example}{例}
 \newtheorem{lemma}{補題}
+% 斜体を解除
+\makeatletter
+\def\th@plain{\upshape}
+\makeatother
 % 数式フォント
 \usepackage{newtxmath}
 % フォントの設定
